Alterações e pagina inicial

--- a/tcc2/ionic.config.json
+++ b/tcc2/ionic.config.json
@@ -1,6 +1,5 @@
 {
-  "name": "ionic-app-base",
-  "app_id": "",
-  "type": "react-vite",
-  "integrations": {}
+  "name": "equipment-loan",
+  "integrations": {},
+  "type": "react"
 }
