--- a/tcc2/equipment-backend/.env
+++ b/tcc2/equipment-backend/.env
@@ -1,1 +1,5 @@
-DATABASE_URL=mysql+pymysql://usuario:senha@localhost/nome_do_banco
+DB_HOST=localhost
+DB_USER=postgres 
+DB_PASSWORD=123
+DB_NAME=emprestimos_db
+DB_PORT=5432  # Opcional, apenas se o PostgreSQL estiver rodando em uma porta diferente
